Added regression training set creator

--- a/EcoluxNILM.ipynb
+++ b/EcoluxNILM.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# We can use the same thing to convert any dataset\n",
-    "source_dir = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\Processed_Data_CSV'\n",
+    "source_dir = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\Original CSV'\n",
     "out_dir = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\refit.h5'"
    ]
   },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cc812c6b-cf14-41ec-85d5-d8b41c5c6165",
    "metadata": {
     "scrolled": true
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b5ae4f8a-9953-4784-8e10-eab61ea1de56",
    "metadata": {},
    "outputs": [
@@ -976,8 +976,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "be36be29-040e-4624-b4dc-6da8c846ac7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatted house 1\n",
+      "Formatted house 2\n",
+      "Formatted house 3\n",
+      "Formatted house 4\n",
+      "Formatted house 5\n",
+      "Formatted house 6\n",
+      "Formatted house 7\n",
+      "Formatted house 8\n",
+      "Formatted house 9\n",
+      "Formatted house 10\n",
+      "Formatted house 11\n",
+      "Formatted house 12\n",
+      "Formatted house 13\n",
+      "Formatted house 14\n",
+      "Formatted house 15\n",
+      "Formatted house 16\n",
+      "Formatted house 17\n",
+      "Formatted house 18\n",
+      "Formatted house 19\n",
+      "Formatted house 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rem\n",
+    "input_path = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\Completed CSV\\\\house'\n",
+    "output_path = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\Regression Training Set\\\\house'\n",
+    "\n",
+    "# Go through all houses\n",
+    "for house_id in sorted(refit.buildings):\n",
+    "    cur_input = input_path + str(house_id) + '.csv'\n",
+    "    cur_output = output_path + str(house_id) + '.csv'\n",
+    "\n",
+    "    # Read csv\n",
+    "    house_df = pd.read_csv(cur_input)\n",
+    "\n",
+    "    # Make conditional series\n",
+    "    condition = house_df['Total'].squeeze() != 0\n",
+    "\n",
+    "    # Getting rid of extra rows\n",
+    "    house_df = house_df[condition]\n",
+    "    house_df.to_csv(cur_output, index=False)\n",
+    "    print(\"Formatted house \" + str(house_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0eb68e0-c970-46ff-bcf3-9051a4139345",
    "metadata": {},
    "outputs": [],
    "source": []
