Added filtered and unfiltered datasets

--- a/EcoluxNILM_REFIT.ipynb
+++ b/EcoluxNILM_REFIT.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "31352643-9820-4cd7-929a-ce278386e45a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "# We can use the same thing to convert any dataset\n",
     "source_dir = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\Original CSV'\n",
     "out_dir = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\refit.h5'"
@@ -84,22 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b5ae4f8a-9953-4784-8e10-eab61ea1de56",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimum start date across all buildings: 2013-09-17 23:00:00+00:00\n",
-      "Maximum end date across all buildings: 2015-07-10 11:00:00+00:00\n"
+     "ename": "NameError",
+     "evalue": "name 'refit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Dictionary to hold the date ranges for each house\u001b[39;00m\n\u001b[0;32m      4\u001b[0m date_ranges \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m house_id \u001b[38;5;129;01min\u001b[39;00m \u001b[43mrefit\u001b[49m\u001b[38;5;241m.\u001b[39mbuildings:\n\u001b[0;32m      7\u001b[0m     house \u001b[38;5;241m=\u001b[39m refit\u001b[38;5;241m.\u001b[39mbuildings[house_id]\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;66;03m# The entire house\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'refit' is not defined"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# Dictionary to hold the date ranges for each house\n",
     "date_ranges = {}\n",
     "\n",
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1c417381-d9d2-4c9a-9acf-7107b451c3a0",
    "metadata": {},
    "outputs": [
@@ -590,38 +593,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "be36be29-040e-4624-b4dc-6da8c846ac7d",
+   "cell_type": "markdown",
+   "id": "5219e8f7-7ec1-4a93-a1f3-9f4c36b76aaf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatted house 1\n",
-      "Formatted house 2\n",
-      "Formatted house 3\n",
-      "Formatted house 4\n",
-      "Formatted house 5\n",
-      "Formatted house 6\n",
-      "Formatted house 7\n",
-      "Formatted house 8\n",
-      "Formatted house 9\n",
-      "Formatted house 10\n",
-      "Formatted house 11\n",
-      "Formatted house 12\n",
-      "Formatted house 13\n",
-      "Formatted house 14\n",
-      "Formatted house 15\n",
-      "Formatted house 16\n",
-      "Formatted house 17\n",
-      "Formatted house 18\n",
-      "Formatted house 19\n",
-      "Formatted house 20\n"
-     ]
-    }
-   ],
    "source": [
     "# Rem\n",
     "input_path = 'C:\\\\Users\\\\nicho\\\\OneDrive - The University of Western Ontario\\\\Ecolux\\\\Databases\\\\REFIT\\\\Completed With Meta\\\\house'\n",
@@ -634,7 +608,7 @@
     "\n",
     "    # Read csv\n",
     "    house_df = pd.read_csv(cur_input)\n",
-    "\n",
+    "    \n",
     "    # Make conditional series\n",
     "    condition = house_df['Total'].squeeze() != 0\n",
     "\n",
@@ -643,14 +617,6 @@
     "    house_df.to_csv(cur_output, index=False)\n",
     "    print(\"Formatted house \" + str(house_id))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1711277c-94e3-4527-a17c-a21a1e130d2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
